tests/baselines/reference/privateNameInObjectLiteral-2.errors.txt
privateNameInObjectLiteral-2.ts(2,5): error TS18016: Private identifiers are not allowed outside class bodies.


==== privateNameInObjectLiteral-2.ts (1 errors) ====
    const obj = {
        #foo() {
        ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    
        }
    };
    